<resources>
    <string name="app_name">IT18153682</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Search">Search</string>
    <string name ="DOB">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="m">Male</string>
    <string name="f">Female</string>
    <string name="updatepro">Update Profile</string>
    <string name="Edit">Edit</string>
    <string name="Delete" translatable="false" >Delete</string>
</resources>
